@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-07T08:10:22Z",
-  "count_outdated" : 1249,
-  "uniques_outdated" : 668,
-  "count" : 1267,
-  "uniques" : 679,
+  "timestamp" : "2023-07-09T00:51:43Z",
+  "count_outdated" : 1251,
+  "uniques_outdated" : 669,
+  "count" : 1268,
+  "uniques" : 680,
   "clones" : [
-    {
-      "timestamp": "2023-06-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-25T00:00:00Z",
       "count": 1,
@@ -85,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-07-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
