@@ -1,12 +1,7 @@
 {
-  "count": 18,
+  "count": 17,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-06-24T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-06-25T00:00:00Z",
       "count": 1,
@@ -46,6 +41,11 @@
       "timestamp": "2023-07-03T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-07-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
